--- a/vertical_div.css
+++ b/vertical_div.css
@@ -1,18 +1,44 @@
-.navigation_bar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 90px;
-    background-color: transparent;
-  }
-  
-  .navigation_bar li a {
-    display: block;
-    color: white;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  .navigation_bar li a:hover{
-    background-color: rgb(47, 99, 104);
-    color: white;
-  }
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  box-shadow: 0px 8px 16px 0px rgb(24, 145, 215);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-image: url("Img/blue_under_fire2.png");
+  background-repeat: no-repeat;
+}
+
+
